--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -4,10 +4,8 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
+  adapter: postgresql
   database: smartrent
   pool: 5
   timeout: 5000
-  username: root
-  password:
 
